# Calculator

./: .gitignore  CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  setup.cfg
src/: __init__.py
src/calc_package/: calculator.py
src/calculator_package/: calculator.py
tests/: test_calc.py
