[metadata]
name = calculator-pkg-Grace-Fadeyi
version = 0.0.1
author = Grace Fadeyi
author_email = fadeyigrace293@gmail.com
description = A calculator package that performs simple add/subtract, divide/mulitply functions and takes the nth root of a number
long_description = file: README.md
url = https://github.com/GraceFad/Calculator
project_urls =
    Bug Tracker = https://github.com/GraceFad/Calculator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src